--- a/SYSTEM_ARCHITECTURE.html
+++ b/SYSTEM_ARCHITECTURE.html
@@ -252,8 +252,9 @@ flowchart TB
 
       <div class="hint">
         <strong>Architecture Overview:</strong> This diagram shows the complete system divided into 8 functional blocks, 
-        with separate Encoder and Decoder stages for multi-modal processing. Open this file in any modern browser to view 
-        the interactive flowchart. Each block is color-coded for easy identification.
+        with detailed Encoder (Block 3) and Decoder (Block 4) stages including hidden layers, attention mechanisms, 
+        and neural network architecture details. Open this file in any modern browser to view the interactive flowchart. 
+        Each block is color-coded for easy identification.
       </div>
     </div>
 
