--- a/SYSTEM_ARCHITECTURE.html
+++ b/SYSTEM_ARCHITECTURE.html
@@ -206,7 +206,7 @@ flowchart TB
   %% ========================================
   %% BLOCK 7: VISUALIZATION + ADVICE
   %% ========================================
-  subgraph BLOCK7["⬛ BLOCK 7: VISUALIZATION & ADVICE"]
+  subgraph BLOCK7["BLOCK 7: VISUALIZATION & ADVICE"]
     direction TB
     VIZ["Data Visualization<br/>Matplotlib/Plotly<br/>• Calorie Charts<br/>• Macro Pie Charts"]
     ADVICE["AI Advice Engine<br/>LangChain + LLaMA<br/>• Gap Analysis<br/>• Personalized Suggestions"]
@@ -218,7 +218,7 @@ flowchart TB
   %% ========================================
   %% BLOCK 8: OUTPUT & DELIVERY
   %% ========================================
-  subgraph BLOCK8["⬛ BLOCK 8: OUTPUT & DELIVERY"]
+  subgraph BLOCK8["BLOCK 8: OUTPUT & DELIVERY"]
     direction TB
     PDF["PDF Report Generator<br/>FPDF/ReportLab<br/>• Food Logs<br/>• Charts<br/>• Advice"]
     DOWNLOAD["Download Options<br/>💾 Save Locally<br/>📧 Email<br/>☁️ Cloud Storage"]
