--- a/SYSTEM_ARCHITECTURE.html
+++ b/SYSTEM_ARCHITECTURE.html
@@ -221,7 +221,7 @@ flowchart TB
   subgraph BLOCK8["BLOCK 8: OUTPUT & DELIVERY"]
     direction TB
     PDF["PDF Report Generator<br/>FPDF/ReportLab<br/>• Food Logs<br/>• Charts<br/>• Advice"]
-    DOWNLOAD["Download Options<br/>💾 Save Locally<br/>📧 Email<br/>☁️ Cloud Storage"]
+    DOWNLOAD["Download Options<br/>Save Locally<br/>Email<br/>Cloud Storage"]
     PDF --> DOWNLOAD
   end
 
