--- a/SYSTEM_ARCHITECTURE.html
+++ b/SYSTEM_ARCHITECTURE.html
@@ -107,7 +107,7 @@ flowchart TB
   %% BLOCK 3: ENCODER
   %% ========================================
   subgraph BLOCK3["BLOCK 3: ENCODER"]
-    direction TB
+    direction TBBLOCK 4: DECODER — Formulas (all blocks)
     subgraph ENC1_SUB["Vision Encoder - ViT-L/14"]
       direction TB
       E1_1["Patch Embedding Layer<br/>Image → 16x16 Patches"]
