--- a/SYSTEM_ARCHITECTURE.html
+++ b/SYSTEM_ARCHITECTURE.html
@@ -223,67 +223,52 @@ flowchart TB
         BLOCK 4 (Decoder) is expanded with formulas in the separate diagram below.
       </div>
 
-      <h2 style="margin: 32px 0 12px; font-size: 18px; color: #111827;">BLOCK 4: DECODER — Formulas (all blocks)</h2>
+      <h2 style="margin: 32px 0 12px; font-size: 18px; color: #111827;">BLOCK 4: DECODER</h2>
       <p style="margin: 0 0 16px; color: var(--muted); font-size: 13px;">
-        d=768, d_ff=2048, d_h=d/H. V∈ℝ^(L_v×d_v), H^(ℓ)∈ℝ^(T×d). ⊕ concat.
+        Notation: d=768, d_ff=2048. ⊕ concat. LN = layer norm.
       </p>
       <div class="card">
         <pre class="mermaid">
 flowchart TB
-  subgraph S10["§10 Overall Decoder Mapping (Summary)"]
-    N10["c_img=Dec_img(V;θ_img); c_txt=CleanText(x_txt;θ_txt); c_asr=ASR(a;θ_asr)<br/>P_total = Merge(c_img, c_txt, c_asr, c_user, c_hist)"]
+  subgraph IMG["Image path"]
+    direction TB
+    N1["Visual Feature Projection (BLIP-2)<br/>VW + 1b^⊤ ∈ ℝ^(L×d)"]
+    N2["Layer Normalization<br/>LN(x) = γ(x−μ)/√(σ²+ε) + β"]
+    N3["Cross-Attention Visual→Text<br/>Attn = softmax(QK^⊤/√d)V  ;  out = LN(in+O)"]
+    N4["Causal Self-Attention x12<br/>M_ij=0 j≤i else −∞  ;  out = LN(in+O_self)"]
+    N5["Feed-Forward 2048→768<br/>FFN(x) = LN(x + W_2·GELU(xW_1+b_1)+b_2)"]
+    N6["Output / Caption<br/>p(y_t)=softmax(xW+b)  ;  y_t = argmax"]
+    N1 --> N2 --> N3 --> N4 --> N5 --> N6
   end
 
-  subgraph S1["§1 Visual Feature Projection into GPT-2 Space (BLIP-2 style)"]
-    N1["H_v = V W_v + 1 b_v^⊤  ;  W_v∈ℝ^(d_v×d), b_v∈ℝ^d<br/>H_v ∈ ℝ^(L_v×d)"]
-  end
-
-  subgraph S2["§2 Layer Normalization (used throughout decoder)"]
-    N2["μ = (1/d)∑_i x_i  ;  σ² = (1/d)∑_i (x_i−μ)²<br/>LN(x)_i = γ_i(x_i−μ)/√(σ²+ε) + β_i  ;  γ,β∈ℝ^d"]
-  end
-
-  subgraph S3["§3 Cross-Attention Layer — Visual Features to Text (BLIP-2 GPT-2 Decoder—Image Path)"]
-    N3["Q_h=H_in W_h^Q,c, K_h=H_v W_h^K,c, V_h=H_v W_h^V,c  ;  A_h=softmax(Q_h K_h^⊤/√d_h)<br/>O_h=A_h V_h  ;  O=Concat_h O_h W^O,c  ;  H_cross=LN(H_in+O)"]
-  end
-
-  subgraph S4["§4 Transformer Decoder x12 — Causal Self-Attention"]
-    N4["Q_h,K_h,V_h from H_cross  ;  M_ij=0 if j≤i, −∞ if j&gt;i<br/>A_h=softmax((Q_h K_h^⊤+M)/√d_h)  ;  O_self=Concat_h O_h W^O,s<br/>H_self = LN(H_cross+O_self) ∈ ℝ^(T×768)"]
-  end
-
-  subgraph S5["§5 Feed-Forward Network — 2048 to 768 dims"]
-    N5["u = h W_1+b_1, a = GELU(u), v = a W_2+b_2  ;  W_1∈ℝ^(d×d_ff), W_2∈ℝ^(d_ff×d)<br/>h' = LN(h+v)  ;  H_FFN = LN(H_self + FFN(H_self))"]
-  end
-
-  subgraph S6["§6 Output Layer — Vocabulary Projection and Caption Generation — Food Description Text"]
-    N6["z_t = H_out(t) W^V + b^V  ;  W^V∈ℝ^(d×Vocab), b^V∈ℝ^Vocab<br/>p(y_t=k|y_&lt;t) = softmax(z_t)_k  ;  y_t = argmax_k p(y_t=k|y_&lt;t,inputs)"]
-  end
-
-  subgraph S7["§7 Text Path - Direct (Cleaned Text to Description)"]
-    N7a["(w_1,…,w_T_txt)  ;  e_t = E(w_t)+p_t  ;  E∈ℝ^(Vocab×d), p_t∈ℝ^d"]
-    N7b["f_txt = (1/T_txt) ∑_t e_t"]
+  subgraph TXT["Text path"]
+    direction TB
+    N7a["Text Path Direct<br/>e_t = Embed(w_t)+pos_t"]
+    N7b["f = (1/n)∑e_t"]
     N7a --> N7b
   end
 
-  subgraph S8["§8 Audio Path-AST Output (Frozen Weights) (Speech to Text to Description)"]
-    N8a["S = MelSpectrogram(a), S∈ℝ^(F×T_aud)  ;  h_enc = Encoder(S)<br/>p(y_t|y_&lt;t,h_enc) = softmax(g(h_enc,y_&lt;t))  until &lt;eos&gt;"]
-    N8b["(u_1,…,u_T_asr)  ;  e_t^asr = E(u_t)+p_t  ;  f_asr = (1/T_asr)∑_t e_t^asr"]
+  subgraph AUD["Audio path"]
+    direction TB
+    N8a["Audio ASR (Frozen)<br/>S = Mel(a)  ;  p(y_t|·) = softmax(Dec(·))"]
+    N8b["e_t = Embed(u_t)+pos_t  ;  f = (1/n)∑e_t"]
     N8a --> N8b
   end
 
-  subgraph S9["§9 Fusion Module Confidence-Weight LongChain Prompt Manager Context Fusion Layer Combined Food Descripter"]
-    N9["P_total = IMG⊕c_img ⊕ TXT⊕c_txt ⊕ AUDIO⊕c_asr ⊕ USER⊕c_user ⊕ HIST⊕c_hist<br/>f_fused = (w_img·f_img + w_txt·f_txt + w_asr·f_asr) / (w_img+w_txt+w_asr)  ;  w≥0"]
-  end
+  N9["Fusion<br/>P = ⊕c_img⊕c_txt⊕c_asr⊕…  ;  f = (∑w_i f_i)/(∑w_i)"]
+  N10["Summary<br/>c_img=Dec_img(V), c_txt=Clean(·), c_asr=ASR(a)  ;  P = Merge(·)"]
 
-  N1 --> N2 --> N3 --> N4 --> N5 --> N6 --> N9
-  N7b --> N9
-  N8b --> N9
+  N6 -->|caption| N9
+  N7b -->|description| N9
+  N8b -->|description| N9
+  N9 -->|fused prompt| N10
 
   classDef decStyle fill:#fed7aa,stroke:#ea580c,stroke-width:2px,color:#7c2d12
-  class S1,S2,S3,S4,S5,S6,S7,S8,S9,S10 decStyle
+  class N1,N2,N3,N4,N5,N6,N7a,N7b,N8a,N8b,N9,N10,IMG,TXT,AUD decStyle
         </pre>
       </div>
       <div class="hint">
-        Exact block names from decoder_math_formulas.txt. Flow: §1→§2→§3→§4→§5→§6 (Image path), §7 (Text path), §8 (Audio path), all → §9 Fusion; §10 Summary.
+        Flow: Image path → Fusion → Summary. Text and Audio paths → Fusion. Full formulas in decoder_math_formulas.txt.
       </div>
     </div>
 
